--- a/index.html
+++ b/index.html
@@ -156,36 +156,36 @@
       <div class="col-sm">
         <div class="view overlay z-depth-2 rounded text-dark">
             <div class="p-2">
-                <img class="img-fluid w-100" src="./img/products/veggescard.png" alt="Sample">
+                <img class="img-fluid w-100 mycurser" src="./img/products/veggescard.png" alt="Sample">
             </div>
           <div class="d-flex p-3">
             <p class="h5">super grocesory sale</p>
-            <a href="#" class="ml-auto btn btn-success">Order</a>
+            <a href="#" class="ml-auto btn mybtnprime1">Get Offer</a>
           </div>
         </div>
       </div>
       <div class="col-sm">
         <div class="view overlay z-depth-2 rounded text-dark">
             <div class="p-2">
-                <img class="img-fluid w-100" src="./img/products/fishcard.png" alt="Sample">    
+                <img class="img-fluid w-100 mycurser" src="./img/products/fishcard.png" alt="Sample">    
             </div>
           <div class="d-flex p-3">
             <p class="h5">super grocesory sale</p>
-            <a href="#" class="ml-auto btn btn-success">Order</a>
+            <a href="#" class="ml-auto btn mybtnprime1">Get Offer</a>
           </div>
         </div>
       </div>
       <div class="col-sm">
         <div class="view overlay z-depth-2 rounded text-dark">
             <div class="p-2">
-                <img class="img-fluid w-100" src="./img/products/meatcard.png" alt="Sample">
+                <img class="img-fluid w-100 mycurser" src="./img/products/meatcard.png" alt="Sample">
             </div>
           <!-- <a href="#!">
             <div class="mask rgba-white-slight"></div>
           </a> -->
           <div class="d-flex p-3">
             <p class="h5">super grocesory sale</p>
-            <a href="#" class="ml-auto btn btn-success">Order</a>
+            <a href="#" class="ml-auto btn mybtnprime1">Get Offer</a>
           </div>
         </div>
       </div>
@@ -197,28 +197,28 @@
     <!-- ==================================  product banners  ======================================= -->
 
     <section class="container cstm-product-banner">
-      <h2 class="pt-5">Fruits & Vegetables</h2>
+      <h2 class="pt-5">Fruits & Vagetables</h2>
       <div class="row">
       <div class="col-md-6 col-sm-8 col-xs-12 col">
-          <img class="img-fluid" src="./img/products/Green_Organic-Store_560x378_11thMay21.png" alt="">
+          <img class="img-fluid mycurser" src="./img/products/Green_Organic-Store_560x378_11thMay21.png" alt="">
       </div>
       <div class="col-md-3 col-sm-4 col-xs-12">
           <div class="row">
               <div class="col-sm-12 col-md-12 col-xs-6 col">
-                  <img class="img-fluid" src="./img/products/vegitable1.png" alt="">
+                  <img class="img-fluid mycurser" src="./img/products/vegitable1.png" alt="">
               </div>
               <div class="col-sm-12 col-md-12 col-xs-6 col">
-                  <img class="img-fluid" src="./img/products/vegitable2.png" alt="">
+                  <img class="img-fluid mycurser" src="./img/products/vegitable2.png" alt="">
               </div>
           </div>
       </div>
-      <div class="col-md-3 col-sm-4 col-xs-12 hidden-sm hidden-xs">
+      <div id="cstm-extra-product-banner" class="col-md-3 col-sm-4 col-xs-12 hidden-sm hidden-xs">
           <div class="row">
               <div class="col-sm-12 col-md-12 col-xs-6 col">
-                  <img class="img-fluid" src="./img/products/vegitable3.png" alt="">
+                  <img class="img-fluid mycurser" src="./img/products/vegitable3.png" alt="">
               </div>
               <div class="col-sm-12 col-md-12 col-xs-6 col">
-                  <img class="img-fluid" src="./img/products/vegitable4.png" alt="">
+                  <img class="img-fluid mycurser" src="./img/products/vegitable4.png" alt="">
               </div>
           </div>
       </div>
@@ -229,13 +229,13 @@
 
     <!-- ================================== product item list  ================================== -->
     <div class="container cstm-product-item-list">
-      <h2 class="pt-5">Fruits & Vegetables</h2>
-      <h4 class="pb-3">Fresh and Healthy Vegetable</h4>
+      <h2 class="pt-5">Fruits & Vagetables</h2>
+      <h4 class="pb-3">Fresh and Healthy Vagetable</h4>
 
       <div class="pb-3">
-        <a href="#" class="btn btn-dark">All</a>
-        <a href="#" class="btn btn-dark">Fresh</a>
-        <a href="#" class="btn btn-dark">High Quality</a>
+        <a href="#" class="btn mybtnprime2">All</a>
+        <a href="#" class="btn mybtnprime2">Fresh</a>
+        <a href="#" class="btn mybtnprime2">High Quality</a>
       </div>
 
 
@@ -244,9 +244,9 @@
 
       <!-- ----------------------------------------------------------------- -->
       <div class="row ">
-        <div class="col-lg-3 col-md-3">
-          <div class="view overlay z-depth-2 rounded text-dark">
-            <div class="p-2">
+        <div class="col-lg-3 col-md-6 ">
+          <div class="view overlay z-depth-2 rounded text-dark cstm-products">
+            <div class="p-2 mycurser">
                 <img class="img-fluid w-100" src="./img/products/veggescard.png" alt="Sample">
             </div>
             <div class=" px-3">
@@ -264,15 +264,15 @@
               <!-- ------------------------------------------------ -->
               </div>
               <div class="d-flex">
-                <a href="#" class="mr-auto btn btn-dark">Order</a>
-                <a href="#" class="ml-auto btn btn-dark">add to cart</a>
+                <a href="#" class="mr-auto btn mybtnprime1">Order</a>
+                <a href="#" class="ml-auto btn mybtnprime2">add to cart</a>
               </div>
             </div>
           </div>
         </div>
-        <div class="col-lg-3 col-md-3">
-          <div class="view overlay z-depth-2 rounded text-dark">
-            <div class="p-2">
+        <div class="col-lg-3 col-md-6 ">
+          <div class="view overlay z-depth-2 rounded text-dark cstm-products">
+            <div class="p-2  mycurser">
                 <img class="img-fluid w-100" src="./img/products/veggescard.png" alt="Sample">
             </div>
             <div class=" px-3">
@@ -290,15 +290,15 @@
               <!-- ------------------------------------------------ -->
               </div>
               <div class="d-flex">
-                <a href="#" class="mr-auto btn btn-dark">Order</a>
-                <a href="#" class="ml-auto btn btn-dark">add to cart</a>
+                <a href="#" class="mr-auto btn mybtnprime1">Order</a>
+                <a href="#" class="ml-auto btn mybtnprime2">add to cart</a>
               </div>
             </div>
           </div>
         </div>
-        <div class="col-lg-3 col-md-3">
-          <div class="view overlay z-depth-2 rounded text-dark">
-            <div class="p-2">
+        <div class="col-lg-3 col-md-6 ">
+          <div class="view overlay z-depth-2 rounded text-dark cstm-products">
+            <div class="p-2 mycurser">
                 <img class="img-fluid w-100" src="./img/products/veggescard.png" alt="Sample">
             </div>
             <div class=" px-3">
@@ -316,15 +316,15 @@
               <!-- ------------------------------------------------ -->
               </div>
               <div class="d-flex">
-                <a href="#" class="mr-auto btn btn-dark">Order</a>
-                <a href="#" class="ml-auto btn btn-dark">add to cart</a>
+                <a href="#" class="mr-auto btn mybtnprime1">Order</a>
+                <a href="#" class="ml-auto btn mybtnprime2">add to cart</a>
               </div>
             </div>
           </div>
         </div>
-        <div class="col-lg-3 col-md-3">
-          <div class="view overlay z-depth-2 rounded text-dark">
-            <div class="p-2">
+        <div class="col-lg-3 col-md-6 ">
+          <div class="view overlay z-depth-2 rounded text-dark cstm-products">
+            <div class="p-2 mycurser">
                 <img class="img-fluid w-100" src="./img/products/veggescard.png" alt="Sample">
             </div>
             <div class=" px-3">
@@ -342,8 +342,8 @@
               <!-- ------------------------------------------------ -->
               </div>
               <div class="d-flex">
-                <a href="#" class="mr-auto btn btn-dark">Order</a>
-                <a href="#" class="ml-auto btn btn-dark">add to cart</a>
+                <a href="#" class="mr-auto btn mybtnprime1">Order</a>
+                <a href="#" class="ml-auto btn mybtnprime2">add to cart</a>
               </div>
             </div>
           </div>
@@ -351,10 +351,10 @@
         
       </div>
       <!-- ---------------------------------------------------------------------------- -->
-      <div class="row py-3">
-        <div class="col-lg-3 col-md-3">
-          <div class="view overlay z-depth-2 rounded text-dark">
-            <div class="p-2">
+      <div class="row">
+        <div class="col-lg-3 col-md-6 ">
+          <div class="view overlay z-depth-2 rounded text-dark cstm-products">
+            <div class="p-2 mycurser">
                 <img class="img-fluid w-100" src="./img/products/veggescard.png" alt="Sample">
             </div>
             <div class=" px-3">
@@ -372,15 +372,15 @@
               <!-- ------------------------------------------------ -->
               </div>
               <div class="d-flex">
-                <a href="#" class="mr-auto btn btn-dark">Order</a>
-                <a href="#" class="ml-auto btn btn-dark">add to cart</a>
+                <a href="#" class="mr-auto btn mybtnprime1">Order</a>
+                <a href="#" class="ml-auto btn mybtnprime2">add to cart</a>
               </div>
             </div>
           </div>
         </div>
-        <div class="col-lg-3 col-md-3">
-          <div class="view overlay z-depth-2 rounded text-dark">
-            <div class="p-2">
+        <div class="col-lg-3 col-md-6 ">
+          <div class="view overlay z-depth-2 rounded text-dark cstm-products">
+            <div class="p-2 mycurser">
                 <img class="img-fluid w-100" src="./img/products/veggescard.png" alt="Sample">
             </div>
             <div class=" px-3">
@@ -398,15 +398,15 @@
               <!-- ------------------------------------------------ -->
               </div>
               <div class="d-flex">
-                <a href="#" class="mr-auto btn btn-dark">Order</a>
-                <a href="#" class="ml-auto btn btn-dark">add to cart</a>
+                <a href="#" class="mr-auto btn mybtnprime1">Order</a>
+                <a href="#" class="ml-auto btn mybtnprime2">add to cart</a>
               </div>
             </div>
           </div>
         </div>
-        <div class="col-lg-3 col-md-3">
-          <div class="view overlay z-depth-2 rounded text-dark">
-            <div class="p-2">
+        <div class="col-lg-3 col-md-6 ">
+          <div class="view overlay z-depth-2 rounded text-dark cstm-products">
+            <div class="p-2 mycurser">
                 <img class="img-fluid w-100" src="./img/products/veggescard.png" alt="Sample">
             </div>
             <div class=" px-3">
@@ -424,15 +424,15 @@
               <!-- ------------------------------------------------ -->
               </div>
               <div class="d-flex">
-                <a href="#" class="mr-auto btn btn-dark">Order</a>
-                <a href="#" class="ml-auto btn btn-dark">add to cart</a>
+                <a href="#" class="mr-auto btn mybtnprime1">Order</a>
+                <a href="#" class="ml-auto btn mybtnprime2">add to cart</a>
               </div>
             </div>
           </div>
         </div>
-        <div class="col-lg-3 col-md-3">
-          <div class="view overlay z-depth-2 rounded text-dark">
-            <div class="p-2">
+        <div class="col-lg-3 col-md-6 ">
+          <div class="view overlay z-depth-2 rounded text-dark cstm-products">
+            <div class="p-2 mycurser">
                 <img class="img-fluid w-100" src="./img/products/veggescard.png" alt="Sample">
             </div>
             <div class="px-3">
@@ -450,8 +450,8 @@
               <!-- ------------------------------------------------ -->
               </div>
               <div class="d-flex">
-                <a href="#" class="mr-auto btn btn-dark">Order</a>
-                <a href="#" class="ml-auto btn btn-dark">add to cart</a>
+                <a href="#" class="mr-auto btn mybtnprime1">Order</a>
+                <a href="#" class="ml-auto btn mybtnprime2">add to cart</a>
               </div>
             </div>
           </div>
